add production url

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ DB_DATABASE=my-app
 PORT=3000
 DB_USER=dongmingxin
 DB_PASSWORD=DMx5522715
-NODE_ENV=production
+NODE_ENV=development
+PRODUCTION_URL=https://my-app-iota-five.vercel.app/
