--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ PORT=3000
 DB_USER=dongmingxin
 DB_PASSWORD=DMx5522715
 NODE_ENV=development
-PRODUCTION_URL=https://my-app-iota-five.vercel.app/
+PRODUCTION_URL=https://dongmingxin.vercel.app/
