--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "axios": "^0.27.2",
+    "js-cookie": "^3.0.1",
     "mongoose": "^6.5.4",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -22,6 +23,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.7.15",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
