--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "axios": "^0.27.2",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.5.4",
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "styled-components": "^5.3.5"
   },
@@ -29,7 +29,7 @@
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "^5.1.25",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "^13.0.4",
     "typescript": "4.8.2"
   }
 }
