--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^0.27.2",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.5.4",
-    "next": "^13.0.4",
+    "next": "12.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
