--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "axios": "^0.27.2",
+    "framer-motion": "^8.1.7",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.5.4",
     "next": "^12.2.5",
